# state_machine

./: CMakeLists.txt  README.md
src/: state.h  state_machine.cpp  state_machine.h
